base/src/test/resources/failure/struct/no-such-field.aya.txt
In file $FILE:6:2 ->

  4 |   
  5 |   def make-vec2 (A B : Type) (a : A) (b : B) : Vec2 A B =>
  6 |     new Vec2 A B { | x => a | y => b | z => a }
    |     ^-----------------------------------------^

Error: No such field(s): `z`

1 error(s), 0 warning(s).
What are you doing?
